fix: align header height

--- a/src/Promotions/WelcomeBanner/resources/js/app/components/Row/styles.scss
+++ b/src/Promotions/WelcomeBanner/resources/js/app/components/Row/styles.scss
@@ -28,20 +28,22 @@
         gap: var(--givewp-spacing-2);
         margin-bottom: var(--givewp-spacing-2);
         width: 100%;
+        line-height: 1.5;
 
-        > h2 {
+
+        h2 {
             margin: 0;
         }
     }
 
     > h2 {
+        line-height: 1.5;
+
         margin: 0 0 var(--givewp-spacing-2) 0;
     }
 
     > p {
-        align-self: stretch;
         font-size: 0.875rem;
-        line-height: 1.5;
         letter-spacing: normal;
         text-align: left;
         color: var(--givewp-grey-900);
@@ -55,27 +57,11 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        min-height: 100%;
         align-self: stretch;
-
-        &__header {
-            h1 {
-                line-height: 1.265;
-            }
-        }
-
-        > h2 {
-            line-height: 1.5;
-
-        }
-
-        > span {
-            line-height: 1.5;
-        }
     }
 
     .givewp-welcome-banner-row:nth-child(2), .givewp-welcome-banner-row:nth-child(3) {
-        flex: 1.15;
+        flex: 1.25;
     }
 }
 
